# podman-machine

./: .gitignore  README.adoc  Vagrantfile  ansible.cfg  playbook.yml  podman-machine.plist.template  pyproject.toml
etc/: podman-rest-api.service  podman.service  podman.socket  registries.conf
